--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purplenew_background"
@@ -95,7 +95,7 @@
                         android:textColor="@color/white" />
 
                     <EditText
-                        android:id="@+id/editTextText2"
+                        android:id="@+id/inputname1"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginStart="32dp"
@@ -104,11 +104,13 @@
                         android:background="@drawable/whitenew_background"
                         android:ems="10"
                         android:hint="Enter Here"
-                        android:inputType="textEmailAddress"
+                        android:inputType="text"
                         android:paddingStart="16dp"
                         android:textColor="#000000"
-                        android:textColorHint="#000000"
+                        android:textColorHint="#808080"
                         android:textSize="16dp" />
+
+
 
                     <TextView
                         android:id="@+id/textView7"
@@ -121,7 +123,7 @@
                         android:textColor="@color/white" />
 
                     <EditText
-                        android:id="@+id/editTextText2"
+                        android:id="@+id/inputphone1"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginStart="32dp"
@@ -130,11 +132,12 @@
                         android:background="@drawable/whitenew_background"
                         android:ems="10"
                         android:hint="Enter Here"
-                        android:inputType="textPassword"
+                        android:inputType="phone"
                         android:paddingStart="16dp"
                         android:textColor="#000000"
-                        android:textColorHint="#000000"
+                        android:textColorHint="#808080"
                         android:textSize="16dp" />
+
 
                     <TextView
                         android:id="@+id/textView7"
@@ -146,8 +149,9 @@
                         android:text="Email"
                         android:textColor="@color/white" />
 
+
                     <EditText
-                        android:id="@+id/editTextText2"
+                        android:id="@+id/inputemail1"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginStart="32dp"
@@ -159,7 +163,7 @@
                         android:inputType="textEmailAddress"
                         android:paddingStart="16dp"
                         android:textColor="#000000"
-                        android:textColorHint="#000000"
+                        android:textColorHint="#808080"
                         android:textSize="16dp" />
 
                     <TextView
@@ -172,8 +176,9 @@
                         android:text="Password"
                         android:textColor="@color/white" />
 
+
                     <EditText
-                        android:id="@+id/editTextText2"
+                        android:id="@+id/inputpassword1"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginStart="32dp"
@@ -182,36 +187,10 @@
                         android:background="@drawable/whitenew_background"
                         android:ems="10"
                         android:hint="Enter Here"
-                        android:inputType="textEmailAddress"
+                        android:inputType="textPassword"
                         android:paddingStart="16dp"
                         android:textColor="#000000"
-                        android:textColorHint="#000000"
-                        android:textSize="16dp" />
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="8dp"
-                        android:text="Confirm Password"
-                        android:textColor="@color/white" />
-
-                    <EditText
-                        android:id="@+id/editTextText2"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@drawable/whitenew_background"
-                        android:ems="10"
-                        android:hint="Enter Here"
-                        android:inputType="textEmailAddress"
-                        android:paddingStart="16dp"
-                        android:textColor="#000000"
-                        android:textColorHint="#000000"
+                        android:textColorHint="#808080"
                         android:textSize="16dp" />
 
                     <LinearLayout
@@ -221,7 +200,7 @@
                         android:orientation="horizontal" />
 
                     <Button
-                        android:id="@+id/Signup"
+                        android:id="@+id/Signup1"
                         style="@android:style/Widget.Button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -230,9 +209,35 @@
                         android:layout_marginEnd="32dp"
                         android:layout_marginBottom="16dp"
                         android:background="@drawable/bluenew_background"
+                        android:clickable="true"
                         android:text="Sign-up"
                         android:textColor="#ffffff"
+
                         android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/LogIn1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="-10dp"
+                        android:background="@android:drawable/divider_horizontal_dim_dark"
+                        android:clickable="true"
+                        android:text="                                               Login Now!"
+                        android:textAlignment="center"
+                        android:textColor="#0000FF"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="-35dp"
+                        android:layout_marginBottom="32dp"
+                        android:text="Already have an account?"
+
+                        android:textColor="#000000"
+                        android:textSize="15sp" />
 
                 </LinearLayout>
 
