--- a/app/src/main/res/layout/activitygoal1.xml
+++ b/app/src/main/res/layout/activitygoal1.xml
@@ -1,61 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/mainGoal1"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/purplenew_background"
+android:nestedScrollingEnabled="true"
+android:overScrollMode="ifContentScrolls"
+android:visibility="visible"
+tools:context=".MainGoal1"
+tools:visibility="visible">
+
+<ImageView
+    android:id="@+id/imageView13"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="-75dp"
+    android:src="@drawable/top_arc"
+    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+    app:layout_constraintStart_toStartOf="parent" />
+
+<ImageView
+    android:id="@+id/imageView12"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="-75dp"
+    android:src="@drawable/bottom_arc"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
+
+<TextView
+    android:id="@+id/textView10"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="20dp"
+    android:layout_marginTop="100dp"
+    android:text="goal \nrecommendations!"
+    android:textAllCaps="true"
+    android:textColor="#ffffff"
+    android:textSize="32sp"
+    android:textStyle="bold"
+    android:visibility="visible"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:visibility="visible" />
+
+<LinearLayout
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/purplenew_background"
-    tools:context=".MainActivity2_0">
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-75dp"
-        android:src="@drawable/top_arc"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/imageView8"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="35dp"
+        android:onClick="openActivity"
+        app:srcCompat="@drawable/c" />
 
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-75dp"
-        android:src="@drawable/bottom_arc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
-        android:text="Hi,\nCreate \nAccount !"
-        android:textColor="#ffffff"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginStart="230dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="1dp"
-            android:onClick="openActivity"
-            app:srcCompat="@drawable/c" />
+        android:layout_height="500dp"
+        android:layout_weight="500"
+        android:scrollY="1000dp"
+        android:scrollbarStyle="insideInset">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,11 +76,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="13dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="40dp"
                 android:background="@drawable/chandu_background"
                 android:orientation="vertical"
                 android:visibility="visible">
@@ -80,21 +92,49 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Full Name"
+                    android:text="1. Set Monthly Savings Target"
                     android:textColor="@color/white" />
 
-                <EditText
-                    android:id="@+id/editTextText2"
+                <TextView
+                    android:id="@+id/TextT2"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="198dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/whitenew_background"
                     android:ems="10"
-                    android:hint="Enter Here"
-                    android:inputType="textEmailAddress"
                     android:paddingStart="16dp"
+                    android:text="\nGOAL:\nSave a specific amount of your income (e.g., 10%-20%).
+
+\n\nRecommendation:\nAutomate transfers to a\nsavings account after every\npaycheck."
+                    android:textColor="#000000"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="2. Create and Stick to a Budget"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/TextTex2"
+                    android:layout_width="match_parent"
+                    android:layout_height="277dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/whitenew_background"
+                    android:ems="10"
+                    android:paddingStart="16dp"
+                    android:text="\nGoal:\nDefine spending limits in categories like groceries, entertainment, and transportation.
+
+\n\nRecommendation:\nAllocate a fixed percentage of income to each category and adjust based on actual spending.
+"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
                     android:textSize="16dp" />
@@ -106,21 +146,23 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Phone Number"
+                    android:text="3. Emergency Fund"
                     android:textColor="@color/white" />
 
-                <EditText
-                    android:id="@+id/editTextText2"
+                <TextView
+                    android:id="@+id/edTextText2"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="221dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/whitenew_background"
                     android:ems="10"
-                    android:hint="Enter Here"
-                    android:inputType="textPassword"
                     android:paddingStart="16dp"
+                    android:text="\nGoal:\nBuild an emergency fund with\nat least 3-6 months' worth of living expenses.
+
+\n\nRecommendation:\nSet aside a fixed amount monthly until the goal is reached.
+"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
                     android:textSize="16dp" />
@@ -132,21 +174,23 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Email"
+                    android:text="4. Emergency Fund"
                     android:textColor="@color/white" />
 
-                <EditText
-                    android:id="@+id/editTextText2"
+                <TextView
+                    android:id="@+id/editTtText2"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="225dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/whitenew_background"
                     android:ems="10"
-                    android:hint="Enter Here"
-                    android:inputType="textEmailAddress"
                     android:paddingStart="16dp"
+                    android:text="\nGoal:\nBuild an emergency fund with\nat least 3-6 months' worth of living expenses.
+
+\n\nRecommendation:\nSet aside a fixed amount monthly until the goal is reached.
+"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
                     android:textSize="16dp" />
@@ -158,47 +202,23 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Password"
+                    android:text="5. Track and Improve Credit Score"
                     android:textColor="@color/white" />
-
-                <EditText
-                    android:id="@+id/editTextText2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/whitenew_background"
-                    android:ems="10"
-                    android:hint="Enter Here"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="16dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#000000"
-                    android:textSize="16dp" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/inputname"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="Confirm Password"
-                    android:textColor="@color/white" />
-
-                <EditText
-                    android:id="@+id/editTextText2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="232dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/whitenew_background"
                     android:ems="10"
-                    android:hint="Enter Here"
-                    android:inputType="textEmailAddress"
                     android:paddingStart="16dp"
+                    android:text="\nGoal:\nRaise your credit score by a certain number of points within a set period.
+
+\n\nRecommendation:\nMake timely payments, reduce credit card usage, and monitor your score regularly.
+"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
                     android:textSize="16dp" />
@@ -207,10 +227,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="16dp"
-                    android:orientation="horizontal"/>
+                    android:orientation="horizontal" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/GotIt"
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -219,21 +239,16 @@
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/bluenew_background"
-                    android:text="Sign-up"
+                    android:clickable="true"
+                    android:text="Got It!"
                     android:textColor="#ffffff"
                     android:textSize="20sp" />
 
             </LinearLayout>
+
         </LinearLayout>
+    </ScrollView>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/purplenew_background"
-            android:visibility="visible">
-
-        </ScrollView>
-    </LinearLayout>
-
+</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
