--- a/app/src/main/res/layout/activitymain3_1.xml
+++ b/app/src/main/res/layout/activitymain3_1.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main3"
+    android:id="@+id/main3_1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purplenew_background"
     android:visibility="visible"
-    tools:context=".MainActivity3">
+    tools:context=".MainActivity3_1">
 
     <ImageView
         android:id="@+id/imageView9"
@@ -97,7 +97,7 @@
                     android:shadowDx="2.5"
                     android:shadowDy="2.3"
                     android:shadowRadius="2.6"
-                    android:text="Your CREDENCE Account has been Successfully Created!"
+                    android:text="You have Successfully Logged In CREDENCE!"
                     android:textColor="@color/white"
                     />
 
@@ -108,7 +108,7 @@
 
 
                 <Button
-                    android:id="@+id/Cont1"
+                    android:id="@+id/Cont2"
                     style="@android:style/Widget.Button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -117,6 +117,7 @@
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/bluenew_background"
+                    android:clickable="true"
                     android:shadowColor="#000000"
                     android:shadowDx="2.0"
                     android:shadowDy="1.8"
@@ -137,7 +138,6 @@
 
         </ScrollView>
     </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
