--- a/app/src/main/res/layout/activity_main2_1.xml
+++ b/app/src/main/res/layout/activity_main2_1.xml
@@ -56,182 +56,209 @@
             android:layout_marginBottom="1dp"
             app:srcCompat="@drawable/c" />
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/chandu_background"
-                android:orientation="vertical"
-                android:visibility="visible">
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="Email"
-                    android:textColor="@color/white" />
-
-                <EditText
-                    android:id="@+id/inputemail2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/whitenew_background"
-                    android:ems="10"
-                    android:hint="Enter Here"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="16dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#808080"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="Password"
-                    android:textColor="@color/white" />
-
-                <EditText
-                    android:id="@+id/inputpassword2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/whitenew_background"
-                    android:ems="10"
-                    android:hint="Enter Here"
-                    android:inputType="textPassword"
-                    android:paddingStart="16dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#808080"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="match_parent"
-                    android:layout_height="21dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="1dp"
-                    android:background="@drawable/whitenew_background"
-                    android:backgroundTint="#9D1CB3"
-                    android:text="OR"
-                    android:textAlignment="center"
-                    android:textColor="@color/white" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/button4"
-                        style="@android:style/Widget.Button"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="1dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="1dp"
-                        android:background="@drawable/common_google_signin_btn_text_dark_normal"
-                        android:clickable="true"
-                        android:shadowColor="#000000"
-                        android:shadowDx="2.0"
-                        android:shadowDy="1.8"
-                        android:shadowRadius="2.0"
-                        android:text="Continue with Google"
-                        android:textColor="#ffffff"
-                        android:textSize="15sp" />
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginBottom="16dp"
+                        android:background="@drawable/chandu_background"
+                        android:orientation="vertical"
+                        android:visibility="visible">
+
+                        <TextView
+                            android:id="@+id/warn1"
+                            android:layout_width="match_parent"
+                            android:layout_height="61dp"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginTop="32dp"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="@drawable/background_button_white"
+                            android:ems="10"
+                            android:paddingStart="40dp"
+                            android:text="We couldn't find an account with that email address."
+                            android:textColor="@color/design_default_color_error"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginTop="32dp"
+                            android:layout_marginBottom="8dp"
+                            android:text="Email"
+                            android:textColor="@color/white" />
+
+                        <EditText
+                            android:id="@+id/inputemail2"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="@drawable/whitenew_background"
+                            android:ems="10"
+                            android:hint="Enter Here"
+                            android:inputType="textEmailAddress"
+                            android:paddingStart="16dp"
+                            android:textColor="#000000"
+                            android:textColorHint="#808080"
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginBottom="8dp"
+                            android:text="Password"
+                            android:textColor="@color/white" />
+
+                        <EditText
+                            android:id="@+id/inputpassword2"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="@drawable/whitenew_background"
+                            android:ems="10"
+                            android:hint="Enter Here"
+                            android:inputType="textPassword"
+                            android:paddingStart="16dp"
+                            android:textColor="#000000"
+                            android:textColorHint="#808080"
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="match_parent"
+                            android:layout_height="21dp"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginBottom="1dp"
+                            android:background="@drawable/whitenew_background"
+                            android:backgroundTint="#9D1CB3"
+                            android:text="OR"
+                            android:textAlignment="center"
+                            android:textColor="@color/white" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="16dp"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/button4"
+                                style="@android:style/Widget.Button"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="20dp"
+                                android:layout_marginTop="1dp"
+                                android:layout_marginEnd="20dp"
+                                android:layout_marginBottom="1dp"
+                                android:background="@drawable/common_google_signin_btn_text_dark_normal"
+                                android:clickable="true"
+                                android:shadowColor="#000000"
+                                android:shadowDx="2.0"
+                                android:shadowDy="1.8"
+                                android:shadowRadius="2.0"
+                                android:text="Continue with Google"
+                                android:textColor="#ffffff"
+                                android:textSize="15sp" />
 
 
+                        </LinearLayout>
+
+                        <Button
+                            android:id="@+id/textView8"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="1dp"
+
+                            android:background="@android:drawable/divider_horizontal_dim_dark"
+                            android:text="Forgot Password?"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="#000000"
+                            android:textSize="15sp" />
+
+                        <ProgressBar
+                            android:id="@+id/progress2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="157dp"
+                            android:layout_marginEnd="32dp"
+                            android:visibility="gone" />
+
+                        <Button
+                            android:id="@+id/button3"
+                            style="@android:style/Widget.Button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="32dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="32dp"
+                            android:layout_marginBottom="16dp"
+                            android:background="@drawable/bluenew_background"
+                            android:clickable="true"
+                            android:shadowColor="#000000"
+                            android:shadowDx="2.0"
+                            android:shadowDy="1.8"
+                            android:shadowRadius="2.0"
+                            android:text="Login"
+                            android:textColor="#ffffff"
+                            android:textSize="20sp" />
+
+                        <Button
+                            android:id="@+id/Signup3"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+
+                            android:background="@android:drawable/divider_horizontal_dim_dark"
+                            android:clickable="true"
+                            android:text="                                           Signup Now!"
+                            android:textAlignment="center"
+                            android:textColor="#0000FF"
+                            android:textSize="15sp" />
+
+
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="30dp"
+                            android:layout_marginTop="-35dp"
+                            android:layout_marginBottom="32dp"
+                            android:text="Don't have an account?"
+
+                            android:textColor="#000000"
+                            android:textSize="15sp" />
+                    </LinearLayout>
                 </LinearLayout>
-
-                <Button
-                    android:id="@+id/textView8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-
-                    android:background="@android:drawable/divider_horizontal_dim_dark"
-                    android:text="Forgot Password?"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="#000000"
-                    android:textSize="15sp" />
-
-                <Button
-                    android:id="@+id/button3"
-                    style="@android:style/Widget.Button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@drawable/bluenew_background"
-                    android:clickable="true"
-                    android:shadowColor="#000000"
-                    android:shadowDx="2.0"
-                    android:shadowDy="1.8"
-                    android:shadowRadius="2.0"
-                    android:text="Login"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp" />
-
-                <Button
-                    android:id="@+id/Signup3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:background="@android:drawable/divider_horizontal_dim_dark"
-                    android:clickable="true"
-                    android:text="                                           Signup Now!"
-                    android:textAlignment="center"
-                    android:textColor="#0000FF"
-                    android:textSize="15sp" />
-
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginTop="-35dp"
-                    android:layout_marginBottom="32dp"
-                    android:text="Don't have an account?"
-
-                    android:textColor="#000000"
-                    android:textSize="15sp" />
             </LinearLayout>
-        </LinearLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/purplenew_background"
-            android:visibility="visible">
-
         </ScrollView>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
