--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -78,6 +78,22 @@ android:orientation="vertical">
         android:visibility="visible">
 
         <TextView
+            android:id="@+id/displayname"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="8dp"
+
+            android:shadowColor="#000000"
+            android:shadowDx="2.5"
+            android:shadowDy="2.3"
+            android:shadowRadius="2.6"
+            android:text="NAME"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <TextView
             android:id="@+id/displaytext"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -85,16 +101,13 @@ android:orientation="vertical">
             android:layout_marginTop="32dp"
             android:layout_marginBottom="8dp"
 
-            android:textSize="20sp"
             android:shadowColor="#000000"
             android:shadowDx="2.5"
             android:shadowDy="2.3"
             android:shadowRadius="2.6"
-            android:text="Hello World!"
+            android:text="EMAIL ADDRESS"
             android:textColor="@color/white"
-            />
-
-
+            android:textSize="20sp" />
 
 
 
