--- a/app/src/main/res/layout/activity_main2_may.xml
+++ b/app/src/main/res/layout/activity_main2_may.xml
@@ -9,7 +9,7 @@
     android:nestedScrollingEnabled="true"
     android:overScrollMode="ifContentScrolls"
     android:visibility="visible"
-    tools:context=".MainActivity2"
+    tools:context=".MainActivity2_may"
     tools:visibility="visible">
 
     <ImageView
@@ -38,7 +38,7 @@
         android:layout_marginTop="40dp"
         android:text="Hi,\nCreate \nAccount !"
         android:textColor="#ffffff"
-        android:textSize="32sp"
+        android:textSize="27sp"
         android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="13dp"
                     android:layout_marginEnd="24dp"
                     android:layout_marginBottom="40dp"
                     android:background="@drawable/chandu_background"
@@ -117,7 +116,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="32dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginBottom="8dp"
                         android:text="Phone Number"
                         android:textColor="@color/white" />
@@ -144,7 +143,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="32dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginBottom="8dp"
                         android:text="Email"
                         android:textColor="@color/white" />
@@ -171,7 +170,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="32dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginBottom="8dp"
                         android:text="Password"
                         android:textColor="@color/white" />
@@ -197,8 +196,8 @@
 
                     <ProgressBar
                         android:id="@+id/progress1"
-                        android:visibility=""
-                        android:layout_marginStart="157dp"
+                        android:visibility="gone"
+                        android:layout_marginStart="130dp"
                         android:layout_marginEnd="32dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -209,7 +208,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginEnd="32dp"
                         android:layout_marginBottom="16dp"
                         android:background="@drawable/bluenew_background"
