--- a/app/src/main/res/layout/activitymain3_1_may.xml
+++ b/app/src/main/res/layout/activitymain3_1_may.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/purplenew_background"
     android:visibility="visible"
-    tools:context=".MainActivity3_1">
+    tools:context=".MainActivity3_1_may">
 
     <ImageView
         android:id="@+id/imageView9"
@@ -22,8 +22,8 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="210dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="190dp"
         android:text="CONGRATULATIONS!"
         android:textColor="#ffffff"
         android:textSize="32sp"
@@ -53,8 +53,8 @@
             android:id="@+id/imageView10"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginStart="135dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginStart="130dp"
+            android:layout_marginTop="80dp"
             android:layout_marginBottom="10dp"
             app:srcCompat="@drawable/success" />
 
@@ -63,8 +63,8 @@
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_marginStart="230dp"
-            android:layout_marginTop="-190dp"
-            android:layout_marginBottom="120dp"
+            android:layout_marginTop="-170dp"
+            android:layout_marginBottom="100dp"
             app:srcCompat="@drawable/c" />
 
         <LinearLayout
@@ -102,11 +102,6 @@
                     />
 
 
-
-
-
-
-
                 <Button
                     android:id="@+id/Cont2"
                     style="@android:style/Widget.Button"
@@ -118,6 +113,7 @@
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/bluenew_background"
                     android:clickable="true"
+                    android:fontFamily="@font/agbalumo"
                     android:shadowColor="#000000"
                     android:shadowDx="2.0"
                     android:shadowDy="1.8"
